Trying to avoid the container overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
+.container {
+    margin-right: auto;
+    margin-left: auto;
+}
 
 .container.gallery-container {
     background-color: #333;
